--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
+alembic==1.5.8
 aniso8601==7.0.0
+asyncpg==0.22.0
 click==7.1.2
-Flask==1.1.2
+databases==0.4.3
+fastapi==0.63.0
 graphene==2.1.8
+graphene-sqlalchemy==2.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 greenlet==1.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
+h11==0.12.0
+Mako==1.1.4
 MarkupSafe==1.1.1
 promise==2.3
+psycopg2==2.8.6
+pydantic==1.8.1
+python-dateutil==2.8.1
+python-dotenv==0.16.0
+python-editor==1.0.4
 Rx==1.6.1
+singledispatch==3.6.1
 six==1.15.0
-SQLAlchemy==1.4.3
-Werkzeug==1.0.1
+SQLAlchemy==1.3.23
+starlette==0.13.6
+typing-extensions==3.7.4.3
+uvicorn==0.13.4
