--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Mako==1.1.4
 MarkupSafe==1.1.1
 promise==2.3
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pydantic==1.8.1
 python-dateutil==2.8.1
 python-dotenv==0.16.0
