--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ databases==0.4.3
 ecdsa==0.14.1
 fastapi==0.63.0
 graphene==2.1.8
+graphene-file-upload==1.3.0
 graphene-sqlalchemy==2.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
