sixth step to understand ci/cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Create CodeDeploy Deployment
         id: deploy
         run: |
+          aws configure set aws_access_key_id ${{secrets.AWS_SECRET_ACCESS_KEY_ID}}
+          aws configure set aws_secret_access_key ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws configure set region ${{secrets.AWS_DEFAULT_REGION}}
           aws deploy create-deployment \
             --application-name application-name \
             --deployment-group-name AppDeploymentGroupName \
