--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,3 +58,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY_ID: ${{secrets.AWS_SECRET_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
+      # Step 3
+      - name: Run UVICORN
+        run: uvicorn main:app --host 0.0.0.0 --port 8000
