11's step to understand ci/cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,6 @@ jobs:
           AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
       # Step 3
       - name: Run UVICORN
-        run: uvicorn main:app --host 0.0.0.0 --port 8000
+        run: |
+        source ./venv/bin/activate
+        uvicorn main:app --host 0.0.0.0 --port 8000
