--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,5 @@ jobs:
       # Step 3
       - name: Run UVICORN
         run: |
-          source ./venv/bin/activate
+          source /home/ubuntu/wishlist_GQL/venv/bin/activate
           uvicorn main:app --host 0.0.0.0 --port 8000
