14's step to understand ci/cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
       # Step 4
       - name: Activate VENV and install dependencies
         run:  |
-          virtualenv -p python3.9 venv
-          source ./venv/bin/activate
+          virtualenv -p python3.9 ./wishlist_GQL/venv
+          source /home/ubuntu/wishlist_GQL/venv/bin/activate
           pip install -r requirements.txt
 
 
