--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           aws configure set aws_secret_access_key ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws configure set region ${{secrets.AWS_DEFAULT_REGION}}
           aws deploy create-deployment \
-            --application-name deploy-app \
+            --application-name deploy_app \
             --deployment-group-name ec2_deployapp_group \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
