--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
    destination: /home/ubuntu/wishlist_GQL
 hooks:
   AfterInstall:
-   - location: scripts/install_app_dependencies
+   - location: scripts/install_app_dependencies.sh.sh
      timeout: 30
      runas: root
   ApplicationStart:
-   - location: scripts/start_server
+   - location: scripts/start_server.sh.sh
      timeout: 30
      runas: root
