update README, fix command in supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,7 +18,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
-[program:flaskapplication]
-command = nohup authbind uvicorn main:app --host 0.0.0.0 --port 8000
+[program:starletteapplication]
+command = screen uvicorn main:app --host 0.0.0.0 --port 8000
 #stdout_logfile = /var/log/flask-application-stdout.log
 #stderr_logfile = /var/log/flask-application-stderr.log
