--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,6 +19,6 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:starletteapplication]
-command = screen uvicorn main:app --host 0.0.0.0 --port 8000
+command = hohup authbind uvicorn main:app --host 0.0.0.0 --port 8000
 #stdout_logfile = /var/log/flask-application-stdout.log
 #stderr_logfile = /var/log/flask-application-stderr.log
