--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,15 @@ phases:
     run-as: ubuntu
     runtime-versions:
        python: 3.9
-    #commands:
-      # - There are no build commands
+    commands:
+      # Install pip
+      - sudo apt-get install python3-pip
+      # Upgrade AWS CLI to the latest version
+      - pip install wheel
+      - pip install virtualenv
   pre_build:
     run-as: ubuntu
     commands:
-      - yes | python3 -m pip install wheel
-      - yes | python3 -m pip install virtualenv
       - cd wishlist_GQL
       - python3 -m virtualenv venv
       - source venv/bin/activate
@@ -35,5 +37,5 @@ phases:
       - cp /home/ubuntu/deploy/.env /home/ubuntu//wishlist_GQL # copy dotenv
       - cp -H /home/ubuntu/deploy/cert/privkey.pem /home/ubuntu/wishlist_GQL/cert # copy https key
       - cp -H /home/ubuntu/deploy/cert/fullchain.pem /home/ubuntu/wishlist_GQL/cert # copy https cert
-      - supervisorctl restart deploy # start/restart deploying
+      - supervisorctl restart gql_api # start/restart deploying
 
