--- a/buildspec.yml
+++ b/buildspec.yml
@@ -33,3 +33,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+artifacts:
+  files:
+    - '**/*'
+  name: wlist_source_code
