update buildspec and appspec

--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,6 @@ files:
     runas: ubuntu
 hooks:
   BeforeInstall:
-      - location: server_configs/scripts/before_install.sh
+      - location: $HOME/wishlist_GQL/scripts/before_install.sh
   AfterInstall:
-      - location: server_configs/scripts/after_install.sh
+      - location: $HOME/wishlist_GQL/scripts/after_install.sh
