--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
     #commands:
       #- python3 -m virtualenv venv
       #- source venv/bin/activate
-      #- pip install -r requirements.txt --yes
+      #- pip install -r requirements1.txt --yes
   #build:
     #commands:
       #- pytest tests/unit/
